--- a/style.css
+++ b/style.css
@@ -1,27 +1,125 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@600&family=Open+Sans&family=Roboto+Mono:wght@300&display=swap');
 
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
 }
 
-.background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -10;
-  background-color: #F99FF9;
-}
-
 .content {
-    margin: 0 50px;
+    margin: 60px 50px 10px 50px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+
+/* ------------------------- navigation --------------------------- */
+
+#sticky-bar-mobile {
+  width: 100%;
+  height: 50px;
+  position: fixed;
+  top: 0;
+}
+
+#sticky-bar-mobile img {
+  width: 20px;
+  height: 20px;
+}
+
+#sticky-bar-mobile span {
+  font-family: 'Archivo', sans-serif;
+  font-size: 1em;
+  font-weight: 600;
+  color: #143d59;
+}
+
+.nav-background {      /* sticky bar background on scroll */
+  background: linear-gradient(to bottom, #ceeaf7, transparent);
+}
+
+.brand-mobile {
+  position: absolute;
+  top: 10px;
+  left: 30px;
+}
+
+.nav-mobile {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 50%;
+  background-color: #ceeaf7;
+  z-index: 5;
+  transform: translateX(100%);  /* mobile navigation at first slide out */
+}
+
+.nav-mobile nav ul {
+  padding: 0;
+  margin: 50px 0;
+}
+
+.nav-mobile nav ul li {
+  list-style-type: none;
+  margin: 80px 0 50px 20px;
+}
+
+.nav-mobile nav ul li:hover {
+  background-color: #fcc729;
+}
+
+.nav-mobile nav ul li a {
+  font-family: 'Archivo', sans-serif;
+  font-weight: 600;
+  text-decoration: none;
+  color: #143d59;
+}
+
+#nav-bars, #nav-close {
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  font-size: 1.5em;
+  color: #143d59;
+  z-index: 4;
+  cursor: pointer;
+}
+
+.nav-overlay {           /* black overlay on main site when view nav */
+  position: fixed;
+  top: 0; bottom: 0;
+  right: 0; left: 0;
+  background-color: rgb(0, 0, 0, 0.3);
+  display: none;
+  z-index: 4;
+}
+
+.show {
+  transform: translateX(0);         /* get back to original position */
+  transition: transform linear 0.2s;
+}
+
+.hide {
+  transform: translateX(100%);      /* slide out of screen */
+  transition: transform linear 0.2s;
+}
+
+.fade-in {
+  display: block;
+  animation: fadeIn linear 0.2s;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* -------------------------------------------------- */
 
 h1 {
     text-align: center;
@@ -65,6 +163,7 @@ blockquote {
 
 blockquote a {
     text-decoration: none;
+    color: #143d59;
 }
 
 .explain {
